--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -2,73 +2,82 @@ name: Python Application CI
 
 on:
   push:
-    branches: [ "main" ] # main 브랜치에 푸시될 때 실행
+    branches: [ "main" ]
     tags:
-      - 'v*' # 'v'로 시작하는 태그가 푸시될 때 실행 (릴리즈용)
+      - 'v*'
   pull_request:
-    branches: [ "main" ] # main 브랜치로의 풀리퀘스트 시 실행 (테스트용)
+    branches: [ "main" ]
 
 jobs:
-  build-windows: # Windows용 exe 빌드 작업
-    runs-on: windows-latest # Windows 실행 환경 사용
+  build-windows:
+    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4 # 코드 가져오기
+    - uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11' # 사용할 파이썬 버전 지정
+        python-version: '3.11' # 사용하는 파이썬 버전
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller google-generativeai # 필요한 라이브러리 명시
-        # 또는 requirements.txt 파일이 있다면:
+        pip install pyinstaller google-generativeai # Pillow 등 다른 라이브러리도 필요하면 추가
+        # 또는 requirements.txt 사용:
         # pip install -r requirements.txt
 
-    - name: Build with PyInstaller
+    - name: Build with PyInstaller (onedir) # 단계 이름에 (onedir) 추가하여 명시
       run: |
-        pyinstaller --name MnbTranslator --onefile --windowed --icon="assets/app_icon.ico" --add-data "data:data" --add-data "assets:assets" main.py
-        # 프로젝트 구조와 main 스크립트 이름에 맞게 수정
+        pyinstaller --name MnbTranslator --onedir --windowed --icon="assets/app_icon.ico" --add-data "data:data" --add-data "assets:assets" main.py
+        # '--onefile' 옵션을 '--onedir'로 변경했습니다.
 
-    - name: Upload artifact # 빌드 결과물을 GitHub Actions 아티팩트로 업로드
+    - name: Archive build artifacts (Windows) # 아티팩트 이름 및 경로 수정
       uses: actions/upload-artifact@v4
       with:
-        name: MnbTranslator-Windows-exe # 아티팩트 이름
-        path: dist/MnbTranslator.exe # PyInstaller가 생성한 exe 파일 경로 (--onefile 경우)
-        # 만약 --onedir 모드라면:
-        # path: dist/MnbTranslator # 폴더 전체를 업로드
+        name: MnbTranslator-Windows-dir # 아티팩트 이름에 -dir 추가하여 구분
+        path: dist/MnbTranslator # '--onedir'로 빌드하면 'dist/YourAppName' 폴더가 생성됨
 
-  create-release: # 태그가 푸시될 때만 실행되는 릴리즈 작업
-    needs: build-windows # build-windows 작업이 성공해야 실행
-    if: startsWith(github.ref, 'refs/tags/') # 태그가 푸시된 경우에만 이 작업 실행
-    runs-on: ubuntu-latest # 릴리즈 생성 작업은 어떤 OS에서든 무방
+  create-release:
+    needs: build-windows
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest # 릴리즈 생성은 OS 무관
     permissions:
-      contents: write # 릴리즈를 생성하고 에셋을 업로드하기 위한 권한
+      contents: write
     steps:
-      - name: Download Windows artifact # 빌드된 exe 다운로드
+      - name: Download Windows artifact (directory) # 아티팩트 이름 및 다운로드 경로 수정
         uses: actions/download-artifact@v4
         with:
-          name: MnbTranslator-Windows-exe
-          path: dist_exe # 다운로드 받을 경로
+          name: MnbTranslator-Windows-dir # 위에서 업로드한 아티팩트 이름과 일치
+          path: dist_build # 다운로드 받을 임시 폴더 이름
+
+      # --onedir로 빌드된 결과는 폴더이므로, 압축하여 릴리즈에 첨부하는 것이 일반적입니다.
+      - name: Create archive of the build directory
+        run: |
+          cd dist_build/MnbTranslator # PyInstaller가 생성한 폴더로 이동 (MnbTranslator 폴더 안으로)
+          zip -r ../MnbTranslator-Windows-${{ github.ref_name }}.zip . # 현재 폴더 내용을 zip으로 압축 (한 단계 상위 폴더에 생성)
+          # Windows Runner에서는 zip 명령 대신 PowerShell의 Compress-Archive 사용 가능
+          # (runs-on: windows-latest 로 변경하고)
+          # Compress-Archive -Path dist_build/MnbTranslator/* -DestinationPath dist_build/MnbTranslator-Windows-${{ github.ref_name }}.zip
+        # 위 zip 명령은 Ubuntu/macOS Runner에서 잘 동작합니다.
+        # 현재 create-release 작업은 ubuntu-latest에서 실행되므로 zip 명령 사용이 적절합니다.
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub에서 자동으로 제공하는 토큰
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }} # 태그 이름 (예: v1.0.0)
+          tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
 
-      - name: Upload Release Asset (Windows EXE)
+      - name: Upload Release Asset (Windows ZIP) # 업로드할 에셋 경로 및 이름 수정
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # Create Release 단계에서 생성된 업로드 URL
-          asset_path: ./dist_exe/MnbTranslator.exe # 업로드할 파일 경로
-          asset_name: MnbTranslator-Windows-${{ github.ref_name }}.exe # 릴리즈에 표시될 에셋 이름
-          asset_content_type: application/octet-stream
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist_build/MnbTranslator-Windows-${{ github.ref_name }}.zip # 압축된 zip 파일 경로
+          asset_name: MnbTranslator-Windows-${{ github.ref_name }}.zip # 릴리즈에 표시될 zip 파일 이름
+          asset_content_type: application/zip
